Added Image to XPM page

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       <article id="content-body">
       </article>
       <aside id="sidebar">
-        <h3>INDEX--</h3>
-        <p id="sidebar-text"></p>
+        <h3>PAGES--</h3>
+        <p id="sidebar-text">
+          <a href="./pages/image-to-xpm.html">Images to XPM format</a>
+        </p>
       </aside>
     </main>
     <div id="footer-wrapper">
       <footer id="footer-bar">
         <button type="button" class="footer-link" title="Home">Home</button>
         <button type="button" class="footer-link" title="About">About</button>
-     </footer>
+      </footer>
     </div>
   </body>
 </html>
