Reversed chars array in getAsciiPerPixel

--- a/pages/image-to-xpm.html
+++ b/pages/image-to-xpm.html
@@ -120,6 +120,7 @@
           for (let i = 0; i < charsPerPixel; i++) {
             chars[i] =(baseArray[i] ? asciiSet[baseArray[i]] : asciiSet[0]);
           }
+          chars.reverse();
           return chars.join("");
         }
 
