Added a link to the Home button

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </main>
     <div id="footer-wrapper">
       <footer id="footer-bar">
-        <button type="button" class="footer-link" title="Home">Home</button>
-        <button type="button" class="footer-link" title="About">About</button>
+        <button type="button" class="footer-link" id="home-btn" title="Home">Home</button>
+        <button type="button" class="footer-link" id="about-btn" title="About">About</button>
       </footer>
     </div>
   </body>
