--- a/pages/image-to-xpm.html
+++ b/pages/image-to-xpm.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400;1,700&display=swap">
-    <script type="text/javascript">
+    <script type="text/javascript" src="../scripts/script.js">
       let alphaThreshold;
       window.addEventListener("load", function() {
         let imgCount = 0;
@@ -185,8 +185,8 @@
     </main>
     <div id="footer-wrapper">
       <footer id="footer-bar"><!-- Buttons currently unfunctional. -->
-        <button type="button" class="footer-link" title="Home">Home</button>
-        <button type="button" class="footer-link" title="About">About</button>
+        <button type="button" class="footer-link" id="home-btn" title="Home">Home</button>
+        <button type="button" class="footer-link" id="about-btn" title="About">About</button>
       </footer>
     </div>
   </body>
