Restructuring pages into js format

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <aside id="sidebar">
         <h3>PAGES--</h3>
         <p id="sidebar-text">
-          <a href="./pages/image-to-xpm.html">Images to XPM format</a>
+          <a href="#pages:images-to-xmp">Images to XPM format</a>
         </p>
       </aside>
     </main>
