--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400;1,700&display=swap">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap"> 
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap">
+    <style>
+      #some-img {
+        z-index: 5;
+        animation-duration: 4s;
+        animation-name: thething;
+      }
+      @keyframes thething {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      #some-text {
+        animation-duration: 2s;
+        animation-name: athing;
+      }
+      @keyframes athing {
+        from {
+          top: 100px;
+          left: 50%;
+          max-width: 350px;
+          font-size: 3em;
+          transform: rotate(15deg);
+        }
+        to {
+          top: 160px;
+          left: 30%;
+          max-width: 500px;
+          font-size: 5em;
+          transform: rotate(-20deg);
+        }
+      }
+    </style>
   </head>
   <body>
     <main id="main-grid">
@@ -24,7 +59,8 @@
       <aside id="sidebar">
         <h3>PAGES--</h3>
         <p id="sidebar-text">
-          <a href="#pages:images-to-xmp">Images to XPM format</a>
+          <a href="#pages:images-to-xmp">Images to XPM format</a><br>
+          <a href="./pages/fractal-viewer.html">Fractal Viewer</a>
         </p>
       </aside>
     </main>
