Changed fractal looping condition to less than or equal to

--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -48,7 +48,7 @@
                     let x = cx, y = cy;
                     let i;
                     let length2;
-                    for (i = 0; i < iter; i++) {
+                    for (i = 0; i <= iter; i++) {
                         let xtemp = x;
                         let x2 = x*x;
                         let y2 = y*y;
@@ -68,7 +68,7 @@
                     let x = cx, y = cy;
                     let i;
                     let length2;
-                    for (i = 0; i < iter; i++) {
+                    for (i = 0; i <= iter; i++) {
                         let xtemp = x;
                         let x2 = x*x;
                         let y2 = y*y;
@@ -88,7 +88,7 @@
                     let x = cx, y = cy;
                     let i;
                     let length2;
-                    for (i = 0; i < iter; i++) {
+                    for (i = 0; i <= iter; i++) {
                         y = y + (cy*Math.sin(x));
                         x = x + (cx*y);
 
