--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -145,9 +145,9 @@
                 };
 
                 function insertInputs() {
-                    document.querySelectorAll("#input-group input").forEach(elem => {
-                        if (elem.value.includes("radio")) {
-                            // TODO: Configurate for radio buttons.
+                    document.querySelectorAll("#input-group input, #input-group select").forEach(elem => {
+                        if (elem.id === "select-fract") {
+                            curFractal = elem.value;
                         } else {
                             config[elemValueMap[elem.id]] = parseFloat(elem.value);
                         }
@@ -156,9 +156,9 @@
                 }
 
                 function assignValues() {
-                    document.querySelectorAll("#input-group input").forEach(elem => {
-                        if (elem.value.includes("radio")) {
-                            // TODO: Configurate for radio buttons.
+                    document.querySelectorAll("#input-group input, #input-group select").forEach(elem => {
+                        if (elem.id === "select-fract") {
+                            elem.value = curFractal;
                         } else {
                             elem.value = config[elemValueMap[elem.id]];
                         }
@@ -246,7 +246,7 @@
 
                     window.requestAnimationFrame(drawOverlay);
                 });
-                document.querySelectorAll("#input-group input").forEach(elem => {
+                document.querySelectorAll("#input-group input, #input-group select").forEach(elem => {
                     elem.setAttribute("title", elem.value);
                     elem.addEventListener("change", () => {
                         elem.setAttribute("title", elem.value);
@@ -331,7 +331,7 @@
             }
             #input-group {
                 position: absolute;
-                bottom: -23em;
+                bottom: -25em;
                 left: 2em;
             }
             #input-group * {
@@ -341,6 +341,10 @@
                 font-family: sans-serif;
                 width: 8em;
                 margin: 0.2em 0;
+            }
+            #input-group select {
+                font-family: sans-serif;
+                margin: 0.5em 0;
             }
             #input-group label {
                 font-family: sans-serif;
@@ -353,7 +357,6 @@
                 margin-left: 20px;
                 display: flex;
             }
-
         </style>
     </head>
     <body>
@@ -373,6 +376,12 @@
                     <label>Red Frequency: 0 <input id="red-weight" type="range" min="0" max="15" step="0.01"> 15</label>
                     <label>Green Frequency: 0 <input id="green-weight" type="range" min="0" max="15" step="0.01"> 15</label>
                     <label>Blue Frequency: 0 <input id="blue-weight" type="range" min="0" max="15" step="0.01"> 15</label>
+                    <label>Current Fractal:</label>
+                    <select id="select-fract">
+                        <option value="mandelbrot" selected>Mandelbrot</option>
+                        <option value="burningship">Burning Ship</option>
+                        <option value="chirikov">Chirikov Map</option>
+                    </select>
                     <button id="changes-btn" style="width: 8em;">Apply Changes</button>
                     <button id="default-btn" style="width: 8em;">Default Reset</button>
                 </div>
