Added fractal page, resplit JS based pages into own documents

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <aside id="sidebar">
         <h3>PAGES--</h3>
         <p id="sidebar-text">
-          <a href="#pages:images-to-xmp">Images to XPM format</a><br>
-          <a href="./pages/fractal-viewer.html">Fractal Viewer</a>
+          <a href="https://skiotic.github.io/pages/image-to-xpm.html">Images to XPM format</a><br>
+          <a href="https://skiotic.github.io/pages/fractal-viewer.html">Fractal Viewer</a>
         </p>
       </aside>
     </main>
