Adjusted section colors - Eliminated use of max-height on content-body - Cleared out page links, putting them in JSON to be pull from there instead

--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
       </article>
       <aside id="sidebar">
         <h3>PAGES--</h3>
-        <p id="sidebar-text">
-          <a href="https://skiotic.github.io/pages/image-to-xpm.html">Images to XPM format</a><br>
-          <a href="https://skiotic.github.io/pages/fractal-viewer.html">Fractal Viewer</a>
-        </p>
+        <p id="sidebar-text"></p>
       </aside>
     </main>
     <div id="footer-wrapper">
