--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -359,7 +359,7 @@
             }
             #input-group input {
                 font-family: sans-serif;
-                width: 8em;
+                width: 13em;
                 margin: 0.2em 0;
             }
             #input-group select {
@@ -426,10 +426,7 @@
             </article>
             <aside id="sidebar">
               <h3>PAGES--</h3>
-              <p id="sidebar-text">
-                <a href="https://skiotic.github.io/pages/image-to-xpm.html">Images to XPM format</a><br>
-                <a href="https://skiotic.github.io/pages/fractal-viewer.html">Fractal Viewer</a>
-              </p>
+              <p id="sidebar-text"></p>
             </aside>
           </main>
           <div id="footer-wrapper">
