--- a/pages/image-to-xpm.html
+++ b/pages/image-to-xpm.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Image to XPM converter">
     <meta name="keywords" content="skiotic">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <script type="text/javascript" src="../scripts/script.js"></script>
     <link rel="stylesheet" type="text/css" href="../styles/main-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap">
