--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -20,7 +20,7 @@
             var shiftX = 0, shiftY = 0;
             var zoom = 0.4
             const midpoint = {
-                x: Math.ceil(height/2),
+                x: Math.ceil(width/2),
                 y: Math.ceil(height/2)
             };
             const config = {
