--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -90,24 +90,24 @@
                         }
                     }
                     return { length: length2, amount: i, limit: limit2 };
-                },
-                "chirikov": function(cx, cy, iter) {
-                    const limit = 100;
-                    const limit2 = limit*limit;
-                    let x = cx, y = cy;
-                    let i;
-                    let length2;
-                    for (i = 0; i <= iter; i++) {
-                        y = y + (cy*Math.sin(x));
-                        x = x + (cx*y);
+                }//,
+                // "chirikov": function(cx, cy, iter) {
+                //     const limit = 100;
+                //     const limit2 = limit*limit;
+                //     let x = cx, y = cy;
+                //     let i;
+                //     let length2;
+                //     for (i = 0; i <= iter; i++) {
+                //         y = y + (cy*Math.sin(x));
+                //         x = x + (cx*y);
 
-                        length2 = (x*x) + (y*y);
-                        if (length2 > limit2) {
-                            break;
-                        }
-                    }
-                    return { length: length2, amount: i, limit: limit2 };
-                }
+                //         length2 = (x*x) + (y*y);
+                //         if (length2 > limit2) {
+                //             break;
+                //         }
+                //     }
+                //     return { length: length2, amount: i, limit: limit2 };
+                // }
             };
             Object.freeze(fractal);
 
@@ -417,7 +417,7 @@
                     <select id="select-fract">
                         <option value="mandelbrot" selected>Mandelbrot</option>
                         <option value="burningship">Burning Ship</option>
-                        <option value="chirikov">Chirikov Map</option>
+                        <!-- <option value="chirikov">Chirikov Map</option> -->
                     </select>
                     <div>
                         <button id="changes-btn" style="width: 8em;">Apply Changes</button>
